[tool.poetry]
name = "tdwii-plus-examples"
version = "0.1.0"
description = "Working sample code for implementing some tdw-ii transactions and some extensions such as UPSWatch and UPSWEvent based subscriptions for activities of interest in a treatment room"
authors = ["Stuart Swerdloff <sjswerdloff@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "tdwii-plus-examples"}]

[tool.poetry.dependencies]
python = "^3.9"
pydicom = "^2.4.0"
pynetdicom = "^2.0.2"

tomlkit = { version = "*", optional = true }    # groups = ["all", "dev"]
toml = { version = "*", optional = true }       # groups = ["all", "dev"]

# ----- #
# Tests #
# ----- #
pytest = { version = "*", optional = true }               # groups = ["all", "tests"]
pytest-sugar = { version = "*", optional = true }         # groups = ["all", "tests"]
# hypothesis = { version = "<6", optional = true }          # groups = ["all", "tests"]
# astroid = { version = "*", optional = true }              # groups = ["all", "tests"]
# psutil = { version = "*", optional = true }               # groups = ["all", "tests"]
pylint = { version = "*", optional = true }               # groups = ["all", "tests"]
pytest-rerunfailures = { version = "*", optional = true } # groups = ["all", "tests"]


# ---------------- #
# Development Only #
# ---------------- #
pre-commit = { version = "*", optional = true }      # groups = ["dev", "all"]
black = { version = "^22.3.0", optional = true }     # groups = ["dev", "all"]
flake8 = { version = "*", optional = true }          # groups = ["dev", "tests", "all"]
mypy = { version = "*", optional = true }            # groups = ["dev", "all"]
rope = { version = "*", optional = true }            # groups = ["dev", "all"]
doc8 = { version = "*", optional = true }            # groups = ["dev", "all"]
# readme-renderer = { version = "*", optional = true } # groups = ["dev", "all"]
# tabulate = { version = "*", optional = true }        # groups = ["dev", "all", "doctests"]
# pyoxidizer = { version = "*", optional = true }      # groups = ["dev", "all", "build"]

[tool.poetry.extras]

tests = [
    "pylint",
    "pytest",
    "pytest-rerunfailures",
    "pytest-sugar",
    "toml",
]

dev = [
    "pre-commit",
    "black",
    "mypy",
    "rope",
    "doc8",
    "toml",
]

all = [
    "pylint",
    "pytest",
    "pytest-rerunfailures",
    "pytest-sugar",
    "pre-commit",
    "black",
    "mypy",
    "rope",
    "doc8",
    "toml",
    "tomlkit"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
