[tool.poetry]
name = "tdwii_plus_examples"
version = "0.2.0"
description = "Working sample code for implementing some tdw-ii transactions and some extensions such as UPSWatch and UPSWEvent based subscriptions for activities of interest in a treatment room"
authors = ["Stuart Swerdloff <sjswerdloff@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "tdwii_plus_examples"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pydicom = "^2.4.0"
pynetdicom = "^2.1.0"
pyside6 = "^6.6.0"
sqlalchemy = { version = "^2.0"}
tomlkit  = "*"
toml  = "*"
tomli = "*"

# ----- #
# Tests #
# ----- #
pytest = { version = "*", optional = true }               # groups = ["all", "tests"]
pytest-sugar = { version = "*", optional = true }         # groups = ["all", "tests"]
# hypothesis = { version = "<6", optional = true }          # groups = ["all", "tests"]
# astroid = { version = "*", optional = true }              # groups = ["all", "tests"]
# psutil = { version = "*", optional = true }               # groups = ["all", "tests"]
pylint = { version = "*", optional = true }               # groups = ["all", "tests"]
pytest-rerunfailures = { version = "*", optional = true } # groups = ["all", "tests"]


# ---------------- #
# Development Only #
# ---------------- #
pre-commit = { version = "*", optional = true }      # groups = ["dev", "all"]
black = { version = "^24.3.0", optional = true }     # groups = ["dev", "all"]
flake8 = { version = "*", optional = true }          # groups = ["dev", "tests", "all"]
dill = { version = "*", optional = true }          # groups = ["dev", "tests", "all"]
mypy = { version = "*", optional = true }            # groups = ["dev", "all"]
rope = { version = "*", optional = true }            # groups = ["dev", "all"]
doc8 = { version = "*", optional = true }            # groups = ["dev", "all"]
# readme-renderer = { version = "*", optional = true } # groups = ["dev", "all"]
# tabulate = { version = "*", optional = true }        # groups = ["dev", "all", "doctests"]
# pyoxidizer = { version = "*", optional = true }      # groups = ["dev", "all", "build"]
update = "^0.0.1"
parameterized = "^0.9.0"
isort = { version = "*", optional = true}            # groups = ["dev", "tests", "all"]
ruff = { version = "*", optional = true}             # groups = ["dev", "tests", "all"]
numpy = "^2.2.5"
psutil = "^7.0.0"



[tool.poetry.extras]

tests = [
    "pylint",
    "pytest",
    "pytest-rerunfailures",
    "pytest-sugar",
    "toml",
    "flake8",
    "dill",
    "ruff"
]

dev = [
    "pre-commit",
    "black",
    "mypy",
    "rope",
    "doc8",
    "toml",
    "flake8",
    "dill",
    "ruff",
]

all = [
    "pylint",
    "pytest",
    "pytest-rerunfailures",
    "pytest-sugar",
    "pre-commit",
    "black",
    "mypy",
    "rope",
    "doc8",
    "toml",
    "tomlkit",
    "flake8",
    "dill",
    "ruff",
]


[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
ruff = "^0.11.0"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
